WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277212
[WebGPU] three.js compute sample does not render on Intel Macs until window is resized
https://bugs.webkit.org/show_bug.cgi?id=277212
Summary
[WebGPU] three.js compute sample does not render on Intel Macs until window i...
Mike Wyrzykowski
Reported
2024-07-27 15:18:34 PDT
[WebGPU] three.js compute sample does not render on Intel Macs until window is resized
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-07-27 15:19:16 PDT
rdar://131951537
Mike Wyrzykowski
Comment 2
2024-07-27 15:27:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31355
EWS
Comment 3
2024-07-31 19:50:56 PDT
Committed
281682@main
(0151e58f67c5): <
https://commits.webkit.org/281682@main
> Reviewed commits have been landed. Closing PR #31355 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug